首页的搜索功能，及搜索联想功能已初步完成

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CoConat Builder</title>
+    <title>Tools FlockBookmarks</title>
     <meta name="description" content="Perfect Start Лit for React&Webpack web-app development">
     <!-- <link rel="manifest" href="./manifest.json">
     <link rel="shortcut icon" href="./favicon.ico"> -->
@@ -11,6 +11,6 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 </head>
 <body>
-    <div id='react-app-root'/>
+    <div id='react-app-root'></div>
 </body>
 </html>
